--- a/space-tourism/src/pages/Destination/components/DestinationCard/Card.module.scss
+++ b/space-tourism/src/pages/Destination/components/DestinationCard/Card.module.scss
@@ -11,6 +11,28 @@
         justify-content: space-between;
     }
 
+    .planetImg {
+        @include flex-row;
+        justify-content: center;
+
+        .planetPng {
+            @include breakpoint-max($max-mobile) {
+                width: 170px;
+                height: 170px;
+            }
+
+            @include breakpoint-min-max($min-tablet, $max-tablet) {
+                max-width: 300px;
+                max-height: 300px;
+            }
+
+            @include breakpoint-min($min-desktop) {
+                width: auto;
+                height: auto;
+            }
+        }
+    }
+
     @include breakpoint-max($max-mobile) {
         flex: 1;
         @include flex-column;
