--- a/space-tourism/src/pages/Technology/Components/MainSection/MainSection.module.scss
+++ b/space-tourism/src/pages/Technology/Components/MainSection/MainSection.module.scss
@@ -4,18 +4,18 @@
     @include breakpoint-max($max-mobile) {
         @include flex-column;
         gap: 1.5rem;
-        padding: 1.5rem 0;
+        padding: 1.5rem;
     }
 
     @include breakpoint-min-max($min-tablet, $max-tablet) {
         @include flex-column;
         gap: 1.5rem;
-        padding: 2.5rem 0;
+        padding: 2.5rem;
     }
 
     @include breakpoint-min($min-desktop) {
         @include flex-column;
         gap: 1.5rem;
-        padding: 3rem 0 3rem 3rem;
+        padding: 3rem;
     }
 }
