All images animation ajusted

--- a/space-tourism/src/pages/Crew/Components/CrewCard/CrewCard.module.scss
+++ b/space-tourism/src/pages/Crew/Components/CrewCard/CrewCard.module.scss
@@ -51,6 +51,7 @@
     position: relative;
     display: inline-block;
     overflow: hidden;
+    margin: 0 auto;
 
     img {
       display: block;
