--- a/space-tourism/src/pages/Destination/components/DestinationCard/Card.module.scss
+++ b/space-tourism/src/pages/Destination/components/DestinationCard/Card.module.scss
@@ -193,6 +193,8 @@
                 font-size: 1rem;
                 line-height: 180%;
                 letter-spacing: 0px;
+                min-height: 120px;
+                align-content: center;
             }
 
             .detailsTitle {
