--- a/space-tourism/src/pages/Technology/Components/TechCard/TechCard.module.scss
+++ b/space-tourism/src/pages/Technology/Components/TechCard/TechCard.module.scss
@@ -177,8 +177,10 @@
 @include breakpoint-min($min-desktop) {
     .cardContainer {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr auto;
         gap: 2rem;
+        flex: 1;
+        align-items: center;
     }
 
     .techInfo {
@@ -190,6 +192,7 @@
         
         .explanation {
             @include flex-column;
+            justify-content: space-around;
             gap: 24px;
         }
 
@@ -215,8 +218,7 @@
         order: 2;
 
         .image {
-            min-height: 600px;
-            width: 100%;
+            min-width: 608px;
         }
     }
 
