Removed unnecessary files, icon and page title changed. Challenge finished

--- a/space-tourism/src/pages/HomePage/components/HomeMainSection/HomeMainSection.module.scss
+++ b/space-tourism/src/pages/HomePage/components/HomeMainSection/HomeMainSection.module.scss
@@ -46,6 +46,8 @@
       background-color: $white;
       color: $dark-blue;
       transition: box-shadow 0.3s ease-in-out;
+      text-align: center;
+      align-content: center;
 
       &:hover {
         box-shadow: 0 0 0 50px rgba(255, 255, 255, 0.1);
